--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.8.3",
     "echarts": "^5.6.0",
     "vue": "^3.2.13",
-    "vue-echarts": "^7.0.3"
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.2.13"
